@@ -9,6 +9,7 @@
 	debian/copyright,
 	debian/rules: Add Vcs info.
 	* pcmanx_gtk2.cpp: There is no need to check sanity of libpcmanx.
+	* pcmanx_gtk2.cpp: Prevent from program crash (Fixes issue 28).
 
 2011-02-14  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
